# mcp-joplin

./: .bandit  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README_TESTING.md  config.example.json  install.sh  mcp_client_config.json  mcp_server.py  pyproject.toml  test_mcp.py  validate_implementation.py
.claude/: settings.local.json
.github/: FUNDING.yml  copilot-instructions.md
scripts/: dev-setup.sh
specs/001-remote-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-remote-mcp-server/contracts/: joplin-api.json  mcp-tools.json
src/: __init__.py  cli.py  config.py  logging_config.py  server.py
src/middleware/: __init__.py  error_handler.py  health_check.py
src/models/: connection.py  mcp_tool.py  note.py  notebook.py  search_result.py
src/services/: connection_manager.py  joplin_client.py  rate_limiter.py  search_service.py
src/tools/: create_note.py  get_note.py  get_notes_in_notebook.py  list_notebooks.py  search_notes.py  update_note.py
tests/contract/: test_get_note.py  test_get_notes_in_notebook.py  test_list_notebooks.py  test_search_notes.py
tests/integration/: test_connection.py  test_error_handling.py  test_note_retrieval.py  test_notebooks.py  test_performance.py  test_search.py
tests/unit/: test_create_note.py  test_joplin_client_write.py  test_models.py  test_services.py  test_update_note.py
